# Open-Linguistika

./: CMakeLists.txt  README.md  main.cpp  openvoiceos.openlinguistika.desktop
plugins/: GTranslateProvider.cpp  GTranslateProvider.h  GlobalSettings.cpp  GlobalSettings.h  LibreTranslateProvider.cpp  LibreTranslateProvider.h  LinguistikaProvider.cpp  LinguistikaProvider.h  SkillFileModel.cpp  SkillFileModel.h  SupportedLanguagesModel.cpp  SupportedLanguagesModel.h  TranslatableItemsModel.cpp  TranslatableItemsModel.h  TranslatedStringsModel.cpp  TranslatedStringsModel.h
ui/: FileItemDelegate.qml  FolderMenu.qml  GeneratedViewPage.qml  LanguagePage.qml  MenuButton.qml  SkillsPage.qml  TranslationsViewPage.qml  main.qml  qml.qrc
